// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Attentive's ecommEvent destination action: all fields 1`] = `
Object {
  "items": Array [
    Object {
      "name": "Test Product",
      "price": Object {
        "currency": "USD",
        "value": 100,
      },
      "productId": "test-product-id",
      "productImage": "https://example.com/image.jpg",
      "productUrl": "https://example.com/product",
      "productVariantId": "test-product-variant-id",
      "quantity": 1,
    },
  ],
  "occurredAt": "37Q3wojV%LNtOQ",
  "user": Object {
    "externalIdentifiers": Object {
      "customIdentifiers": Object {
        "userId": "testuserid",
      },
    },
  },
}
`;

exports[`Testing snapshot for Attentive's ecommEvent destination action: required fields 1`] = `
Object {
  "items": Array [
    Object {
      "name": "Test Product",
      "price": Object {
        "currency": "USD",
        "value": 100,
      },
      "productId": "test-product-id",
      "productImage": "https://example.com/image.jpg",
      "productUrl": "https://example.com/product",
      "productVariantId": "test-product-variant-id",
      "quantity": 1,
    },
  ],
  "user": Object {
    "externalIdentifiers": Object {
      "customIdentifiers": Object {
        "userId": "testuserid",
      },
    },
  },
}
`;
